# python-project-template

./: .buildinfo  .gitignore  CONTRIBUTING.md  DOCUMENTATION_DEPLOYMENT.md  FILE_PLACEMENT.txt  Makefile  PROJECT_README.template  README.md  api.html  compose.yml  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.sh  usage.html
.doctrees/: api.doctree  environment.pickle  index.doctree  installation.doctree  usage.doctree
.github/workflows/: docs.yml  release.yml  test.yml
_modules/: index.html
_modules/project_name/: config.html
_sources/: api.rst.txt
docker/: Dockerfile
docsrc/source/: confg.py  index.rst  installation.rst  usage.rst
src/project_name/: __init__.py  config.py
test/integration/: test_integration.py
test/unit/: test_config.py
